# kirra-runtime-sdk

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  ENVIRONMENT.md  INSTALL.md  README.md  SECURITY.md  docker-compose.yml  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-pages.yml  docker.yml  release.yml
charts/aegis-verifier/: Chart.yaml  values.yaml
config/: asset_profile.json
crates/kirra-capture-schema/: Cargo.toml
crates/kirra-collector/: Cargo.toml
crates/kirra-fleet-transport/: Cargo.toml  README.md
crates/kirra-governor-service/: Cargo.toml
crates/kirra-planner/: Cargo.toml
crates/kirra-proposal-bench/: Cargo.toml
crates/kirra-proposal-bench/src/: main.rs
crates/kirra-ros2-adapter/: Cargo.toml  README.md  build.rs
crates/kirra-ros2-adapter/src/: config.rs  lib.rs  node.rs  parsing.rs  perception_ingest.rs  state.rs  validation.rs
crates/kirra-ros2-adapter/src/corridor/: mod.rs
crates/kirra-ros2-adapter/tests/: conformance_tests.rs  perception_mechanism_gate_ros2.rs  validation_tests.rs
crates/kirra-wire-client/: Cargo.toml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx
deploy/docker/: Dockerfile.native
docs/: CONSOLE_RUNBOOK.md  CONTRACT_PROFILES.md  ISSUE_TRIAGE_2026-06-01.md  LEARNING_LOOP_ARCHITECTURE.md  MIGRATION_AEGIS_TO_KIRRA.md  action_filter.md  aegis_project_knowledge_base.md  kinematics_envelope_protection.md  llm_integration_guide.md  multi_asset_fabric.md  policy_layer_wiring.md  protocol_adapters.md  ros2_interlock.md  v1_active_passive_runbook.md  v1_dag_cycle_depth_report.md  v1_dr_drill_transcript.md  v1_gateway_policy_matrix.md  v1_release_notes_and_architecture.md  v1_route_authorization_matrix.md  v1_security_invariants.md  v1_tpm_attestation_proof.md  v2_2_0_av_node_graph_patch.rs  v2_2_0_verifier_store_av_patch.rs
docs/adr/: 0001-occy-odd-speed-cap.md  0002-condition-dependent-cap-subodds.md  0003-two-tier-base-and-d1-addon.md  0004-independent-safety-channel.md  0005-availability-model.md  0006-governor-transport-iceoryx2.md  0007-fleet-transport-zenoh.md  0008-key-registry.md  KIRRA_BRINGUP_RUNBOOK.md  KIRRA_PLATFORM_DEPLOYMENT_STRATEGY.md
docs/releases/: v1.1.2.md  v1.5.0.md
docs/roadmap/: APOLLO_KIRRA_INTEGRATION.md  README.md  RSS_KIRRA_INTEGRATION.md
docs/safety/: ANGULAR_VELOCITY_SOTIF.md  ASSUMPTIONS_OF_USE.md  ASTM_F3269_MAPPING.md  ASTM_F3269_RTA_MAPPING.md  CODING_GUIDELINES.md  COMPARATOR_DIVERSITY.md  GOVERNOR_INTEGRITY_EVIDENCE.md  GOVERNOR_SAFETY_MANUAL.md  HARA.md  IEC_61508_MAPPING.md  IEC_61508_SIL3_MAPPING.md  MSG_INTERFACE_VERSION_SYNC.md  OCCY_131_OPTIONB_DESIGN.md  OCCY_ARCHITECTURE_TIERS.md  OCCY_DFA.md  OCCY_FAULT_MODEL.md  OCCY_INDEPENDENT_DETECTOR.md  OCCY_MCDC_EVIDENCE.md  OCCY_PERCEPTION_DERATE_COMPOSITION.md  OCCY_PERCEPTION_DERATE_VALIDATION_GATE.md  OCCY_PERCEPTION_INGEST_PHASE0.md  OCCY_SAFETY_GOALS.md  OCCY_SOTIF.md  OCCY_SPEED_CAP_VALIDATION.md  OCCY_TARA.md  PACIFICA_PILOT_ARCHITECTURE.md  PARKO_OCCY_TOPOLOGY.md  REQUIREMENTS_TRACEABILITY.md  REVIEW_WRAPUP_2026-05-30.md  ROADMAP_TO_ASIL_D.md  RTM_GAP_REPORT.md  SAFETY_ARCHITECTURE.md  SAFETY_CASE_INDEX.md  SAFETY_GOALS.md  SAFE_STATE_SPECIFICATION.md  SPEED_ENVELOPE.md  STANDARDS_MATRIX.md  TRACEABILITY_MATRIX.md
examples/: langchain_action_filter.py  openai_action_filter.py
helm/aegis/: Chart.yaml  values.yaml
include/: aegis.h
parko/: Cargo.toml  INTEGRATION.md  README.md
parko/.cargo/: config.toml
parko/ci/: check-runtime-isolation.sh  runtime-dependent-crates.txt
parko/crates/parko-core/: Cargo.toml
parko/crates/parko-core/src/: backend.rs  clock.rs  commit_zone.rs  control_loop.rs  impact.rs  lib.rs  rss.rs  runtime.rs  safety.rs  scheduler.rs  water.rs
parko/crates/parko-core/src/backends/: mock.rs  openvino_stub.rs
parko/crates/parko-core/tests/: posture_divergence_proptest.rs  test_posture_divergence.rs
parko/crates/parko-onnx/: Cargo.toml
parko/crates/parko-onnx/src/: lib.rs  session_core.rs
parko/crates/parko-onnx/tests/: test_onnx_backend.rs
project-board/: automation.yaml  columns.yaml  templates.md
ros2_ws/src/aegis_bridge_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/aegis_bridge_cpp/src/: aegis_bridge_node.cpp
ros2_ws/src/autoware_control_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/autoware_map_msgs/: CMakeLists.txt  package.xml
scripts/: aegis-dashboard.service  aegis-verifier.service  build_native_test.sh  build_release.sh  fetch-substack-posts.mjs  install-parko-backend.sh  setup_ros2_fleet.sh  test-install-parko-backend.sh  test-qnx-vm.sh
src/: action_filter.rs  action_policy.rs  attestation.rs  audit_chain.rs  capture.rs  clock.rs  command_source.rs  dds_bridge.rs  federation.rs  federation_reconciliation.rs  ffi.rs  industrial_proxy.rs  key_registry.rs  kinematics_contract.rs  kinematics_sim.rs  kirra_core.rs  lib.rs  main.rs  metrics.rs  modbus_adapter.rs  posture_cache.rs  posture_engine.rs  posture_engine_v2.rs  protocol_adapter.rs  recovery_hysteresis.rs  robotics_alignment.rs  ros2_adapter.rs  scenario_runner.rs  security.rs  standby_monitor.rs  startup_sentinel.rs  telemetry.rs  telemetry_watchdog.rs  tests.rs  verifier.rs  verifier_store.rs  wcet_gate.rs
src/adapters/: canopen.rs
src/fabric/: causal_log.rs  governor.rs  router.rs
src/gateway/: cmd_vel.rs  containment.rs  contract_profiles.rs  interceptor.rs  kinematics_contract.rs  kinematics_proptest.rs  mod.rs  perception_monitor.rs  policy.rs  policy_layer.rs
static/: console.html
tests/: actuator_envelope_integration.rs  actuator_middleware_integration.rs  cert_003_rtm_gap_stubs.rs  governor_closes_loop_proof.rs  hil_replay_proof.py  native_test.cpp  posture_gate_integration.rs  rss_simulation.rs
tools/iceoryx2-spike/: Cargo.toml
tools/qnx-rtm-harness/: QNX_MAPPING.md  README.md  rtm_harness.cpp
website/: CNAME  README.md  index.html
website/css/: style.css
website/js/: flow.js  logo.js  logomask.js  main.js  notes.js  scene.js  (+1 more)
work/: active.md  backlog.md  decisions.md  done.md  roadmap.md
(+66 files in other folders)
