[package]
name = "aegis-runtime-sdk"
version = "1.0.0-rc20"
edition = "2021"

[lib]
name = "aegis_runtime_sdk"
crate-type = ["rlib", "cdylib"]

[features]
ros2 = []
tpm = ["dep:tss-esapi"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tss-esapi = { version = "7", optional = true }

[[bin]]
name = "ai_robot_demo"
path = "src/bin/ai_robot_demo.rs"

[[bin]]
name = "ai_robot_sim_diagnostic"
path = "src/bin/ai_robot_sim_diagnostic.rs"

[[bin]]
name = "aegis_ros2_demo_node"
path = "src/bin/aegis_ros2_demo_node.rs"

[[bin]]
name = "aegis_ros2_publisher"
path = "src/bin/aegis_ros2_publisher.rs"
required-features = ["ros2"]

