# crates/kirra-ros2-adapter/Cargo.toml
#
# S131 Phase 1 ŌĆö Option-B per-trajectory wiring adapter (skeleton).
#
# Owns the ROS 2 Ōåö Rust bridge for the Kirra Governor. Built as a separate
# crate so the safety kernel (`kirra-runtime-sdk`) stays free of ROS deps
# and can ship on platforms that don't carry rclpy / ros-base. Production
# integrators that DO run ROS 2 (e.g. Autoware) enable the `ros2` feature
# here and link this crate into their node graph.
#
# Phase 1 scope (this crate, this commit):
#   - AcceptedTrajectory state machine + `AdaptorState` (DashMap-backed).
#   - `CorridorSource` trait + `MockCorridorSource` (5 m half-width corridor).
#   - r2r-backed `run_adapter` node skeleton with stubbed subscriptions
#     and internal mpsc channels feeding slow- and fast-loop task stubs.
#   - NO call into `validate_trajectory_containment` yet ŌĆö Phase 2 wiring.
#   - NO kirra-runtime-sdk dep yet ŌĆö Phase 1 owns its own shared types.
#
# r2r is pinned (=0.9.5) because the project explicitly states "the API will
# change". Bumping is a deliberate maintenance action, not a transitive ride.

[package]
name = "kirra-ros2-adapter"
version = "0.1.0"
edition = "2021"
description = "ROS 2 adapter for the Kirra Governor (Option-B per-trajectory wiring, S131 Phase 1)"
license = "Apache-2.0 OR MIT"

[features]
# Default build = no ROS deps. Enables the state machine + corridor trait
# only, which is what the rest of the workspace consumes today.
default = []

# Enable r2r + the ROS 2 node skeleton in src/node.rs + the
# Lanelet2CorridorSource (cxx wrap of `lanelet2_core`'s
# boost::serialization deserializer). ROS distros: Humble / Jazzy /
# Kilted (per r2r 0.9.5 support matrix). Production integrators turn
# this on; the safety kernel CI keeps it OFF. Requires
#   source /opt/ros/jazzy/setup.bash
#   apt install ros-jazzy-lanelet2 libboost-serialization-dev
# (or the integrator's equivalents) ŌĆö see README.
ros2 = ["dep:r2r", "dep:cxx", "dep:cxx-build"]

[dependencies]
# Concurrency primitives shared with the safety kernel.
dashmap = "6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

# Safety kernel ŌĆö pulled in Phase 2A so the slow-loop validator can call
# `validate_trajectory_containment` (SG2) and `validate_vehicle_command`
# (per-pose kinematics). NOT feature-gated: the algorithm is needed in
# `cargo test` runs that don't enable the ros2 feature.
kirra-runtime-sdk = { path = "../.." }
parko-core        = { path = "../../parko/crates/parko-core" }

# ROS 2 bindings ŌĆö feature-gated. Pinned (`=`) because r2r explicitly does
# not guarantee API stability; a deliberate bump is a separate maintenance
# action. Runtime-agnostic + async-from-the-ground-up.
r2r = { version = "=0.9.5", optional = true }

# cxx ŌĆö Rust Ōåö C++ FFI bridge. Used by `Lanelet2CorridorSource` to call
# into `lanelet2_core`'s boost::serialization deserializer (`fromBinMsg`
# canonical path). Pinned to 1.0 to match cxx-build (build-deps below).
cxx = { version = "1.0", optional = true }

[build-dependencies]
# cxx-build ŌĆö compiles the C++ shim and the cxx-generated glue. Must
# match the `cxx` major version pinned above. Skipped when the `ros2`
# feature is OFF: `build.rs` is a no-op without it.
cxx-build = { version = "1.0", optional = true }

[dev-dependencies]
# State-machine tests don't need the ros2 feature.
tokio = { version = "1", features = ["full", "test-util"] }
