<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!--
    CURATED INTERFACE PACKAGE — real Autoware package name, VERBATIM subset.

    This is the Kirra-curated `autoware_control_msgs` carrying ONLY the message
    closure the adapter consumes: Control (+ its Lateral and Longitudinal
    members). The package NAME is the real Autoware name and the msg/*.msg are
    BYTE-IDENTICAL copies of the deployed Autoware version, so the RIHS type
    hash matches and DDS delivers genuine Autoware messages to the adapter.

    ControlHorizon is dropped (the adapter does not subscribe to it). Control,
    Lateral and Longitudinal reference only builtin_interfaces/Time and
    primitives, so builtin_interfaces is the sole interface dependency.

    See docs/safety/MSG_INTERFACE_VERSION_SYNC.md, KIRRA-OCCY-MSGSYNC-001.
  -->
  <name>autoware_control_msgs</name>
  <version>0.0.0</version>
  <description>
    Kirra-curated subset of autoware_control_msgs (Control closure only:
    Control + Lateral + Longitudinal), verbatim/hash-verified for the
    independent adapter's isolated interface surface.
    See docs/safety/MSG_INTERFACE_VERSION_SYNC.md.
  </description>
  <maintainer email="safety@kirra.systems">Kirra Safety</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
